completed 2nd table, allowed C0 = 0

--- a/cluster-destination-timeofday.Rmd
+++ b/cluster-destination-timeofday.Rmd
@@ -8,41 +8,30 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r 'imports'}
+```{r 'imports', message = FALSE}
 library(conflicted)
-library(tidyverse)
+library(tidyverse) 
 library(rlang)
 library(gt)
   library(gtExtras)
-conflicts_prefer(
-  dplyr::filter
-)
+conflicts_prefer(dplyr::filter)
 ```
 
-```{r 'unzip-data'}
-unzip("./passenger_data.zip")
-```
 
 ```{r 'get-data'}
-data = "./passenger_data.csv" |>
+unzip(zipfile = "passenger_data.zip")
+data = "passenger_data.csv" |>
 	read_csv(
 		col_types = cols(
-			X = col_integer(),
-			Airfield = col_factor(),
-			S2 = col_datetime(),
 			Wait_Time = col_integer(),
 			C_Start = col_integer(),
 			C0 = col_integer(),
 			C_avg = col_double(),
-			Sch_Departure = col_datetime(),
-			Act_Departure = col_datetime(),
 			BFO_Dest_City = col_factor(),
 			BFO_Destination_Country_Code = col_factor(),
 			order = col_integer(),
 			Pass_ID = col_integer(),
-			Departure_Date = col_date(),
-			Departure_Time = col_time(),
-			Time_of_Day = col_factor(),
+			Time_of_Day = col_integer(),
 			Period_of_Week = col_factor(),
 			Day_of_Week = col_factor(),
 			Month = col_factor(),
@@ -52,65 +41,224 @@ data = "./passenger_data.csv" |>
 			Delay_in_Seconds = col_integer(),
 			.default = col_guess()
 		)
-	)
+	) |>
+  select(!Airfield) # all observations are from AUC
 ```
 
 ```{r 'data-edits'}
-# ~1500 observations from Airfield SAF make it unsuitable for clustering
-# the destinations below have too few observations
 data = data |>
-  filter(
-    Airfield == "AUC",
-    BFO_Destination_Country_Code != "WIC",
-    BFO_Dest_City != "BOR008",
-    Year == "2028" # otherwise only 4 obs for 2030
-  ) |>
-  filter(S2 > ymd_hms("2028-08-31 00:00:00")) |>
   mutate(
-    BFO_Dest_City_or_CC = if_else(
-      BFO_Destination_Country_Code == "BOR",
-      true = paste(
-        "City",
-        BFO_Dest_City,
-        sep = "-"
-      ),
-      false = paste(
-        "Country",
-        BFO_Destination_Country_Code,
-        sep = "-"
-      )
+    BFO_Dest_City_or_CC = if_else( # split cities in Borealia, Vespuchia
+      BFO_Destination_Country_Code %in% c("BOR", "VES"),
+      true = BFO_Dest_City,
+      false = BFO_Destination_Country_Code
     ) |>
       as_factor(),
     .after = BFO_Destination_Country_Code
-  ) |>
-  unite(
-    col = cluster,
-    Time_of_Day,
-    BFO_Dest_City_or_CC,
-    sep = "_",
-    remove = FALSE,
-    na.rm = FALSE
-  ) |>
-  mutate(cluster = as_factor(cluster))
+  )
 ```
 
 ```{r 'data-display'}
-summary(data)
 cl = data |>
-  group_by(cluster) |>
-  summarise(n = n())
-cl |>
-  mutate(
-    count = n,
-    rate = n/732, # number of hours: 732 apiece
-    .keep = "unused",
-    .after = cluster
+  summarise(
+    n = n(),
+    .by = c(
+      Time_of_Day,
+      BFO_Dest_City_or_CC
+    )
   ) |>
-  arrange(cluster) |>
-  gt() |>
+  mutate(
+    hour_start = case_when(
+      Time_of_Day == 1 ~ "0:00",
+      Time_of_Day == 2 ~ "6:00",
+      Time_of_Day == 3 ~ "12:00",
+      Time_of_Day == 4 ~ "18:00"
+    ),
+    hour_end = case_when(
+      Time_of_Day == 1 ~ "6:00",
+      Time_of_Day == 2 ~ "12:00",
+      Time_of_Day == 3 ~ "18:00",
+      Time_of_Day == 4 ~ "0:00"
+    ),
+    hours = 732,
+    type = if_else(
+      BFO_Dest_City_or_CC %in% c("QUE", "AUC", "SAF", "CWL"),
+      true = "Domestic",
+      false = "International"
+    ) |>
+      as_factor(),
+    rate = n/732 # number of hours: 732 apiece
+  ) |>
+  filter(n > 20) |>
+  relocate(BFO_Dest_City_or_CC, .after = hours) |>
+  relocate(n, .before = rate) |>
+  arrange(
+    Time_of_Day,
+    BFO_Dest_City_or_CC
+  ) |>
+  mutate( # change how Time_of_Day is displayed, **after** it's been ordered
+    Time_of_Day = case_when(
+      Time_of_Day == 1 ~ "Night",
+      Time_of_Day == 2 ~ "Morning",
+      Time_of_Day == 3 ~ "Afternoon",
+      Time_of_Day == 4 ~ "Evening"
+    )
+  ) |>
+  group_by(Time_of_Day)
+
+gt(cl) |>
   tab_header(
-    title = "Passenger arrival rates at **AUC**" |>
+    title = "Average passenger arrival rates at **AUC**" |>
       md(),
-    subtitle = "clustered by destination and time of day"
+    subtitle = "by destination and time of day"
+  ) |>
+  cols_label(
+    Time_of_Day = "Time",
+    hour_start = "",
+    hour_end = "",
+    BFO_Dest_City_or_CC = "Destination",
+    hours = "Hours",
+    type = "Type",
+    n = "Count",
+    rate = "Arrivals/hour"
+  ) |>
+  tab_options(
+    row_group.as_column = TRUE
+  )
+```
+```{r}
+dist = data |>
+  summarise(
+    avg_servers = mean(C0),
+    .by = c(
+      Time_of_Day,
+      BFO_Dest_City_or_CC
+    )
+  ) |>
+  filter(BFO_Dest_City_or_CC %in% cl$BFO_Dest_City_or_CC) |>
+  filter(Time_of_Day != 1 | BFO_Dest_City_or_CC != "VES033") |>
+  arrange(
+    Time_of_Day,
+    BFO_Dest_City_or_CC
+  )
+dist2 = data |>
+  summarise(
+    n = n(),
+    .by = c(
+      Time_of_Day,
+      BFO_Dest_City_or_CC,
+      C0
+    )
+  ) |>
+  filter(BFO_Dest_City_or_CC %in% cl$BFO_Dest_City_or_CC) |>
+  filter(Time_of_Day != 1 | BFO_Dest_City_or_CC != "VES033")
+dist2 = dist2 |>
+  mutate(
+    total = sum(n),
+    srv1 = if_else(
+      C0 == 1,
+      true = n/total*100,
+      false = 0
+    ),
+    srv2 = if_else(
+      C0 == 2,
+      true = n/total*100,
+      false = 0
+    ),
+    srv3 = if_else(
+      C0 == 3,
+      true = n/total*100,
+      false = 0
+    ),
+    .by = c(
+      Time_of_Day,
+      BFO_Dest_City_or_CC
+    )
+  ) |>
+  arrange(
+    Time_of_Day,
+    BFO_Dest_City_or_CC,
+    C0
+  ) |>
+  summarise(
+    across(srv1:srv3, sum),
+    .by = c(
+      Time_of_Day,
+      BFO_Dest_City_or_CC
+    )
+  )
+```
+```{r}
+joindist = dist |>
+  left_join(
+    dist2,
+    by = join_by(
+      Time_of_Day,
+      BFO_Dest_City_or_CC
+    )
+  )
+```
+```{r}
+cl2 = joindist |>
+  mutate(
+    hour_start = case_when(
+      Time_of_Day == 1 ~ "0:00",
+      Time_of_Day == 2 ~ "6:00",
+      Time_of_Day == 3 ~ "12:00",
+      Time_of_Day == 4 ~ "18:00"
+    ),
+    hour_end = case_when(
+      Time_of_Day == 1 ~ "6:00",
+      Time_of_Day == 2 ~ "12:00",
+      Time_of_Day == 3 ~ "18:00",
+      Time_of_Day == 4 ~ "0:00"
+    ),
+    .after = Time_of_Day
+  ) |>
+  mutate(
+    type = if_else(
+      BFO_Dest_City_or_CC %in% c("QUE", "AUC", "SAF", "CWL"),
+      true = "Domestic",
+      false = "International"
+    ),
+    .after = BFO_Dest_City_or_CC
+  ) |>
+  arrange(
+    Time_of_Day,
+    BFO_Dest_City_or_CC
+  ) |>
+  mutate( # change how Time_of_Day is displayed, **after** it's been ordered
+    Time_of_Day = case_when(
+      Time_of_Day == 1 ~ "Night",
+      Time_of_Day == 2 ~ "Morning",
+      Time_of_Day == 3 ~ "Afternoon",
+      Time_of_Day == 4 ~ "Evening"
+    )
+  ) |>
+  group_by(Time_of_Day)
+
+gt(cl2) |>
+  tab_header(
+    title = "Average number of servers at **AUC**" |>
+      md(),
+    subtitle = "by destination and time of day"
+  ) |>
+  cols_label(
+    Time_of_Day = "Time",
+    hour_start = "",
+    hour_end = "",
+    BFO_Dest_City_or_CC = "Destination",
+    type = "Type",
+    avg_servers = "Avg. # Servers",
+    srv1 = "1",
+    srv2 = "2",
+    srv3 = "3"
+  ) |>
+  tab_spanner(
+    label = "Customers served with # of active servers",
+    columns = c(srv1:srv3)
+  ) |>
+  tab_options(
+    row_group.as_column = TRUE
   )
 ```
