--- a/eqs.tex
+++ b/eqs.tex
@@ -155,6 +155,6 @@
 	W_0\left(\dfrac{\lambda}{1-p}e^{\lambda x}\right) &= \left(\widehat{a}c + \widehat{b}\lambda\right)x\\
 	c_R :&= \dfrac{1}{\widehat{a}x}\left\{W_0\left(\dfrac{\lambda x}{1-p}e^{\lambda x}\right) - \widehat{b}\lambda x\right\}
 \end{align*}
-\[c\approx c_r\]
+\[c\approx c_R\]
 
 \end{document}
